Release 0.8.7
=============

* [ENH] New report layout for fMRI, added carpetplot (#198)
* [ENH] Anatomical workflow refactor (#219).

Release 0.8.6
=============

* [FIX, CRITICAL] Do not chmod in Docker internal scripts
* [FIX] Error creating derivatives folder
* [ENH] Moved MNI spatial normalization to NIworkflows, and made robust.
* [ENH] De-coupled participant and group (reports) levels
* [ENH] Use new FD and DVARs calculations from nipype (#172)
* [ENH] Started with python3 compatibility
* [ENH] Added new M2WM measure #158
* [FIX] QI2 is skipped if background intensity is not appropriate (#147)

Release 0.8.5
=============

* [FIX] Error inverting the T1w-to-MNI warping (#146)
* [FIX] TypeError computing DVARS (#145)
* [ENH] Plot figure of fitted background chi for QI2 (#143)
* [ENH] Move skull-stripping and reorient to NIworkflows (#142)
* [FIX] mriqc crashes if no anatomical scans are found (#141)
* [DOC] Added acknowledgments to CPAC team members (#134)
* [ENH] Use absolute imports (#133)
* [FIX] VisibleDeprecationWarning (#132)
* [ENH] Provide full FD/DVARS files (#128)
* [ENH] Use MCFLIRT to compute motion parameters. AFNI's 3dvolreg now is optional (#121)
* [FIX] BIDS trees with anatomical images with different acquisition tokens (#116)
* [FIX] BIDS trees with anatomical images with several runs (#112)
* [ENH] Options for ANTs normalization: reduced test times (#124),
  and updated options (#115)

Release 0.8.4
=============

* [ENH] PDF reports now use RST templates and jinja2 (#109)
* [FIX] Single-session-multiple-run anatomical files were not correctly located (#112)

Release 0.8.3
=============

* [DOC] Added examples of the PDF reports (#107)
* [FIX] Fixed problems with Python 3 when generating reports.

Release 0.8.2
=============

* [ENH] Python 3 compatibility (#99)
* [ENH] Add JSON settings file for ANTS (#95)
* [ENH] Generate reports automatically if mriqc is run without the -S flag (#93)
* [FIX] Revised implementation of QI2 measure (#90)