@@ -46,15 +46,16 @@ STRUCTURAL_QCGROUPS = [[
     ['inu_range', 'inu_med'],
     ['icvs_csf', 'icvs_gm', 'icvs_wm'],
     ['rpve_csf', 'rpve_gm', 'rpve_wm'],
-    ['summary_mean_bg', 'summary_stdv_bg', 'summary_p05_bg', 'summary_p95_bg',
-     'summary_mean_csf', 'summary_stdv_csf', 'summary_p05_csf', 'summary_p95_csf',
-     'summary_mean_gm', 'summary_stdv_gm', 'summary_p05_gm', 'summary_p95_gm',
-     'summary_mean_wm', 'summary_stdv_wm', 'summary_p05_wm', 'summary_p95_wm']
+    ['summary_mean_bg', 'summary_stdv_bg', 'summary_k_bg', 'summary_p05_bg', 'summary_p95_bg'],
+    ['summary_mean_csf', 'summary_stdv_csf', 'summary_k_csf',
+     'summary_p05_csf', 'summary_p95_csf'],
+    ['summary_mean_gm', 'summary_stdv_gm', 'summary_k_gm', 'summary_p05_gm', 'summary_p95_gm'],
+    ['summary_mean_wm', 'summary_stdv_wm', 'summary_k_wm', 'summary_p05_wm', 'summary_p95_wm']
 ]]
 
 FUNCTIONAL_QCGROUPS = [[
-    ['summary_mean_bg', 'summary_stdv_bg', 'summary_p05_bg', 'summary_p95_bg'],
-    ['summary_mean_fg', 'summary_stdv_fg', 'summary_p05_fg', 'summary_p95_fg'],
+    ['summary_mean_bg', 'summary_stdv_bg', 'summary_k_bg', 'summary_p05_bg', 'summary_p95_bg'],
+    ['summary_mean_fg', 'summary_stdv_fg', 'summary_k_fg', 'summary_p05_fg', 'summary_p95_fg'],
     ['efc'],
     ['fber'],
     ['fwhm', 'fwhm_x', 'fwhm_y', 'fwhm_z'],
